test/com/facebook/buck/parser/testdata/python_user_defined_rules/errors/shadowing_buck_type/BUCK.fixture
load("//errors/shadowing_buck_type:shadow.bzl", "shadow")

shadow(name = "shadowed")
